v 1.1.9.3 (15 jul)
IRC height will be fit to window height
Fixed temporal flux limits not being applied correctly
Fixed resource lock not being correctly applied to craftable resources

Temporal Accelerator
Singularity


v 1.1.9.2 (12 jul)
Black Core tier level changed from 1 to 5
Black Nexus is now a tier 1 structure

Hidden resources statuses will be now saved
Added an option to lock/unlock hidden resources

v 1.1.9.1 (11 jul)
Black Core
BLS limit will be now highlighted

Option to discard paragon bonus completely

v 1.1.9.0 (7 jul)
Unspeakable amount of updates merged in (freeroot, Chris, probably someone else)

Chronotheology
Relic Stations

v 1.1.8.8 (7 jul)
IRC chat will not be reinitialized every time user goes to the log.
Option to turn WS automation on and off
Toggle building and toggle automation will now have tooltips explaining current status.

Added option to discard accumulated religion bonus

Time Battery

v 1.1.8.7 (6 jul)
Embedded IRC chat

v 1.1.8.6 (28 feb)
Time flux

v 1.1.8.5 (20 feb)

Changes by freeroot:
Leader effects
___
Players can break TC in chronoforge

v 1.1.8.4 (24 jan)

Changes by freeroot:

- Added option to show and hide specific resources.
- Census UI tweaks.
- Fixed some issue with options visibility

Changes by Chris:

- Cycles require Numerology/Numeromancy to take effect.
- Numerology now triggers cycle effects in general, and Numeromancy adds more effects during festivals.


v 1.1.8.3 (19 jan)

Changes by freeroot:

-Planetary cycles will now give bonuses to certain structures.
__
Added speedwarp button to the time panel (original idea and code by Tom Muller)

v 1.1.8.2 (13 jan)
Changes by coderpatsy:

Metaphysics fixes
- Show purchased metaphysics perks even if you don't have metaphysics tech
- Remember metaphysics panel's collapsed state - fixes issue #21

Changes by freeroot:

Fixed Factory Logistics technology

____

Added placeholder time/CF panels
You can now refine TC into relics