@@ -28,7 +28,7 @@
 		<script src="science.js?v=1.1.9.3" 		type="text/javascript"></script>
 		<script src="workshop.js?v=1.1.9.3" 	type="text/javascript"></script>
 		<script src="diplomacy.js?v=1.1.9.3" 	type="text/javascript"></script>
-		<script src="religion.js?v=1.1.9.3" 	type="text/javascript"></script>
+		<script src="religion.js?v=1.1.9.3c" 	type="text/javascript"></script>
 		<script src="achievements.js?v=1.1.9.3" type="text/javascript"></script>
 		<script src="space.js?v=1.1.9.3" 		type="text/javascript"></script>
 		<script src="prestige.js?v=1.1.9.3" 	type="text/javascript"></script>
@@ -356,7 +356,11 @@
 				<br>
 
 				<input id="workersToggle" type="checkbox" onclick="gamePage.useWorkers = $('#workersToggle')[0].checked;">
-				<label for="workersToggle">Use web worker <i>(game works correctly in background tab, may cause performance issues)</i></label>
+				<label for="workersToggle">Use web worker
+					<i>(game works correctly in background tab, may cause performance issues)
+						<br>
+						You need to refresh the browser page for this setting to take effect.
+					</i></label>
 				<br>
 
 				<input id="forceHighPrecision" type="checkbox" onclick="gamePage.forceHighPrecision = $('#forceHighPrecision')[0].checked;">
